--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -2,7 +2,7 @@
     <nb-card-header>
         <div class="row">
             <div class="col-11">
-                <h6 class="text-white">Care Team</h6>
+                <h6 class="text-white">{{'KCareTeam' | translate}}</h6>
             </div>
             <div class="col-1 p-0">
                 <button nbButton ghost size="gaint" (click)="open(dialog)">
@@ -14,7 +14,7 @@
                     </nb-icon>
                 </button>
                 <button *ngIf="showDone" nbButton ghost size="large" (click)="change()"
-                    class="text-white ps-3">Done</button>
+                    class="text-white ps-3">{{'kDone' | translate}}</button>
             </div>
         </div>
     </nb-card-header>
@@ -30,7 +30,7 @@
                     </nb-user>
                 </nb-list-item>
                 <nb-list-item>
-                    <h6 class="text-center">No caregivers specified. Tap + to add a caregiver</h6>
+                    <h6 class="text-center">{{'kMsgNoCaregivers' | translate}}</h6>
                 </nb-list-item>
             </div>
             <div class="col-md-3"></div>
@@ -40,14 +40,14 @@
 <ng-template #dialog>
     <nb-card class="dialog-card">
         <nb-card-header>
-            <h6 class="text-center">Invite caregiver</h6>
+            <h6 class="text-center">{{'kTitleInviteCareGiver' | translate}}</h6>
         </nb-card-header>
         <nb-card-body>
             <input type="text" nbInput placeholder="Caregiver Username" [(ngModel)]="careGiver" name="careGiver">
         </nb-card-body>
         <nb-card-footer>
-            <button nbButton status="danger" class="mx-3" (click)="refclose()">Cancel</button>
-            <button nbButton status="primary" class="mx-4" (click)="notify()">OK</button>
+            <button nbButton status="danger" class="mx-3" (click)="refclose()">{{'kCancel' | translate}}</button>
+            <button nbButton status="primary" class="mx-4" (click)="notify()">{{'kOk' | translate}}</button>
         </nb-card-footer>
     </nb-card>
 </ng-template>
