--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -1,33 +1,33 @@
 <form [formGroup]="form">
     <nb-card>
         <nb-card-header>
-            <span>Filter</span>
+            <span>{{'kfilter' | translate}}</span>
         </nb-card-header>
         <nb-card-body class="example-items-col">
             <div>
                 <input class="mb-3" type="text" fullWidth size="small" formControlName="firstName" nbInput id="inputFirstName"
-                    placeholder="First Name">
+                    placeholder="{{'kFirstName' | translate}}">
             </div>
             <div>
                 <input class="mb-3" type="text" fullWidth size="small" formControlName="lastName" nbInput id="inputLastName"
-                    placeholder="Last Name">
+                    placeholder="{{'kLastName' | translate}}">
             </div>
             <div>
-                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD\MM\YYYY"
+                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="{{'kDD\MM\YYYY' | translate}}"
                     [nbDatepicker]="formcontrol">
                 <nb-datepicker #formcontrol format="dd\MM\yyyy"></nb-datepicker>
             </div>
             <div>
                 <nb-button-group size="small" status="primary">
-                    <button nbButtonToggle nbButton>Male</button>
-                    <button nbButtonToggle nbButton>Female</button>
-                    <button nbButtonToggle nbButton>Other</button>
+                    <button nbButtonToggle nbButton>{{'kMale' | translate}}</button>
+                    <button nbButtonToggle nbButton>{{'kFemale' | translate}}</button>
+                    <button nbButtonToggle nbButton>{{'kOther' | translate}}</button>
                 </nb-button-group>
             </div>
         </nb-card-body>
         <nb-card-footer class="d-flex justify-content-end">
-            <button size="small" nbButton status="danger" (click)="close()">Cancel</button>
-            <button size="small" class="ms-2"nbButton status="success" (click)="startSearch()">Search</button>
+            <button size="small" nbButton status="danger" (click)="close()">{{'kCancel' | translate}}</button>
+            <button size="small" class="ms-2"nbButton status="success" (click)="startSearch()">{{'kSearch' | translate}}</button>
         </nb-card-footer>
     </nb-card>
 </form>
