--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,7 +1,7 @@
 <nb-card size="giant" style="overflow: auto">
     <nb-card-header>
         <div>
-            Time Range
+            {{'kTimeRange' | translate}}
             <div class="col-md-3">
                 <select class="form-control border-primary" [(ngModel)]="duration" (ngModelChange)="getList($event)">
                     <option *ngFor="let time of timeduration" value="{{time.val}}" selected>
@@ -15,25 +15,25 @@
         <div class="row">
             <div class="col-6">
                 <div class="col-12 p-3 w-100 chk-block-content" style="display: block" *ngIf="BPChartShow">
-                    <h4>Blood Pressure</h4>
+                    <h4>{{'kBloodPressure' | translate}}</h4>
                     <canvas baseChart width="300" height="120" [datasets]="BPChartDatasets1" [labels]="BPChartLabels"
                         [options]="BPChartOptions" [chartType]="weightChartType"></canvas>
                 </div>
                 <div class="col-12 p-3 mb-4" style="display: block" *ngIf="weightChartShow">
-                    <h4>Weight</h4>
+                    <h4>{{'kWeight' | translate}}</h4>
                     <canvas baseChart width="300" height="120" [datasets]="weightChartdatasets"
                         [labels]="weightChartLabels" [options]="weightChartOptions"
                         [chartType]="weightChartType"></canvas>
                 </div>
                 <div class="col-12 p-3 mb-4" *ngIf="weightChartShow">
-                    <h4>Spo2</h4>
+                    <h4>{{'KPulseOximeterType' | translate}}</h4>
                     <canvas baseChart width="300" height="120" [datasets]="spo2ChartData" [labels]="spo2ChartLabels"
                         [options]="spo2ChartOptions" [chartType]="spo2ChartType"></canvas>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="col-12 p-3 mb-4">
-                    <h4>Total</h4>
+                    <h4>{{'kTotal' | translate}}</h4>
                     <canvas baseChart width="400" height="400" chartType="polarArea" [data]="chartData"
                         [labels]="chartLabels" [legend]="chartLegend"></canvas>
                 </div>
