--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-    <nb-card>
+    <nb-card [nbSpinner]="isLoading">
         <nb-card-header>
             <span>Filter</span>
         </nb-card-header>
@@ -13,21 +13,22 @@
                     placeholder="Last Name">
             </div>
             <div>
-                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD\MM\YYYY"
+                <input class="mb-3" nbInput fullWidth size="small" formControlName="dob" placeholder="DD/MM/YYYY"
                     [nbDatepicker]="formcontrol">
-                <nb-datepicker #formcontrol format="dd\MM\yyyy"></nb-datepicker>
+                <nb-datepicker #formcontrol></nb-datepicker>
             </div>
             <div>
                 <nb-button-group size="small" status="primary">
-                    <button nbButtonToggle nbButton>Male</button>
-                    <button nbButtonToggle nbButton>Female</button>
-                    <button nbButtonToggle nbButton>Other</button>
+                    <button nbButtonToggle nbButton (pressedChange)="getGender($event, 'M')" [pressed] = "selectedGender === 'M'">Male</button>
+                    <button nbButtonToggle nbButton (pressedChange)="getGender($event, 'F')" [pressed] = "selectedGender === 'F'">Female</button>
+                    <button nbButtonToggle nbButton (pressedChange)="getGender($event, 'O')" [pressed] = "selectedGender === 'O'">Other</button>
                 </nb-button-group>
             </div>
         </nb-card-body>
         <nb-card-footer class="d-flex justify-content-end">
-            <button size="small" nbButton status="danger" (click)="close()">Cancel</button>
-            <button size="small" class="ms-2"nbButton status="success" (click)="startSearch()">Search</button>
+            <button size="small" nbButton status="warning" (click)="resetFilter()"> Clear</button>
+            <button size="small" class="ms-2" nbButton status="danger" (click)="close()">Cancel</button>
+            <button size="small" class="ms-2" nbButton status="success" (click)="startSearch()" [disabled]="enableSearch()">Search</button>
         </nb-card-footer>
     </nb-card>
 </form>
