--- a/src/app/pages/patients/list/list.component.scss
+++ b/src/app/pages/patients/list/list.component.scss
@@ -5,3 +5,9 @@
 .patient-list {
     height: calc(100vh - 1.5rem);
 }
+.badge-position {
+    right: 76%;
+    position: absolute;
+    bottom: 18px;
+    z-index: 1;
+}
