--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -7,10 +7,10 @@
             </div>
             <div class="col col-lg-4 col-xl-4" [ngSwitch]="patient?.gender">
                 <p>
-                    <nb-icon icon="email"></nb-icon><span class="ps-4">{{patient?.email}}</span>
+                    <nb-icon icon="email" nbTooltip="Email"></nb-icon><span class="ps-4">{{patient?.email}}</span>
                 </p>
                 <p>
-                    <nb-icon icon="phone" pack="font-awesome"></nb-icon><span
+                    <nb-icon icon="phone" nbTooltip="Phone" pack="font-awesome"></nb-icon><span
                         class="ps-4">{{patient?.phoneNumber}}</span>
                 </p>
                 <p *ngSwitchCase="0">
@@ -26,18 +26,18 @@
                         class="ps-4">Others</span>
                 </p>
                 <p>
-                    <nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span>
+                    <nb-icon icon="birthday-cake" nbTooltip="DOB" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span>
                 </p>
             </div>
             <div class="col-4 col-xl-5">
                 <div class="row mt-3">
                     <div class="col-auto">
-                        <nb-icon icon="flag" pack="font-awesome"></nb-icon><span
+                        <nb-icon icon="flag" nbTooltip="Country" pack="font-awesome"></nb-icon><span
                         class="ps-4">{{patient?.country}}</span>
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-auto"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon></div>
+                    <div class="col-auto"><nb-icon icon="map-marker-alt" nbTooltip="Location" pack="font-awesome"></nb-icon></div>
                     <div class="col-auto">
                             <div>{{patient?.address}}, {{patient?.city}}, {{patient?.state}}</div>
                             <div>{{patient?.zipcode}}</div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-auto">
-                        <nb-icon icon='globe-outline'></nb-icon>
+                        <nb-icon icon='globe-outline' nbTooltip="Language"></nb-icon>
                     </div>
                     <div class="col-auto">{{language?.name}}</div>
                 </div>
