--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,8 +1,8 @@
 <nb-card size="giant" style="overflow: auto" class="mt-3">
     <nb-card-header>
-        <div>
+        <div class="row">
             Time Range
-            <div class="col-md-3">
+            <div class="col-md-3 ps-4">
                 <select class="form-control border-primary" [(ngModel)]="duration" (ngModelChange)="getList($event)">
                     <option *ngFor="let time of timeduration" value="{{time.val}}" selected>
                         {{time.title}}
