--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,59 +1,27 @@
 <nb-card [nbSpinner]="isLoading">
     <nb-card-body>
         <div class="row">
-            <div class="col-2 col-lg-4 col-xl-3 mt-3">
-                <nb-user size="giant" [name]="patientName" [picture]="patient?.imageUrl">
-                </nb-user>
+            <div class="col-md-3">
+               <h4> <nb-user size="large" [name]="patientName" [title]="patient?.email" [picture]="patient?.imageUrl"></nb-user></h4>
+             </div>
+            <div class="col-md-3" [ngSwitch]="patient?.gender">
+                <p><nb-icon icon="phone" pack="font-awesome" ></nb-icon><span class="ps-4">{{patient?.phoneNumber}}</span></p>
+                <p><nb-icon icon="envelope" nbTooltip="Email" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.email}}</span></p>
+                <p *ngSwitchCase="0"> <nb-icon icon="venus-mars"  nbTooltip="Gender" pack="font-awesome"></nb-icon><span class="ps-4">Male</span></p>
+                <p *ngSwitchCase="1"> <nb-icon icon="venus-mars"  nbTooltip="Gender" pack="font-awesome"></nb-icon><span class="ps-4">Female</span></p>
+                <p *ngSwitchCase="2"> <nb-icon icon="venus-mars"  nbTooltip="Gender" pack="font-awesome"></nb-icon><span class="ps-4">Others</span> </p>
             </div>
-            <div class="col col-lg-4 col-xl-4" [ngSwitch]="patient?.gender">
-                <p>
-                    <nb-icon icon="email"></nb-icon><span class="ps-4">{{patient?.email}}</span>
-                </p>
-                <p>
-                    <nb-icon icon="phone" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{patient?.phoneNumber}}</span>
-                </p>
-                <p *ngSwitchCase="0">
-                    <nb-icon icon="venus-mars" nbTooltip="Gender" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{'kMale' | translate}}</span>
-                </p>
-                <p *ngSwitchCase="1">
-                    <nb-icon icon="venus-mars" nbTooltip="Gender" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{'kFemale' | translate}}</span>
-                </p>
-                <p *ngSwitchCase="2">
-                    <nb-icon icon="venus-mars" nbTooltip="Gender" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{'kOther' | translate}}</span>
-                </p>
-                <p>
-                    <nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span>
-                </p>
-            </div>
-            <div class="col-4 col-xl-5">
-                <div class="row mt-3">
-                    <div class="col-auto">
-                        <nb-icon icon="flag" pack="font-awesome"></nb-icon><span
-                        class="ps-4">{{patient?.country}}</span>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-auto"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon></div>
-                    <div class="col-auto">
-                            <div>{{patient?.address}}, {{patient?.city}}, {{patient?.state}}</div>
-                            <div>{{patient?.zipcode}}</div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-auto">
-                        <nb-icon icon='globe-outline'></nb-icon>
-                    </div>
-                    <div class="col-auto">{{language?.name}}</div>
-                </div>
-            <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidityValue}}</span></p> 
-            
-            </div>
-            <div class="col-auto col-lg-12 col-xl-2 align-bottom">
-                    <p><nb-checkbox class="profileMonitered" status="info" [checked]="monitored" (change)="setCheckedStatus($event)">Monitored</nb-checkbox></p>
+            <div class="col-md-6">
+              <p class="text-uppercase"><nb-icon icon="map-marker-alt" pack="font-awesome"></nb-icon> 
+                    <span class="ps-4">{{patient?.address}}</span>
+                    <span class="ps-1">{{patient?.state}}</span>, <br>
+                    <span><nb-icon></nb-icon> 
+                    <span class="ps-4">{{patient?.city}}</span>,
+                    <span class="ps-1">{{patient?.country}}</span>,
+                    <span class="ps-1">{{patient?.zipcode}}</span>.
+                    </span>
+              </p> 
+            <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidity}}</span></p> 
             </div>
         </div>
     </nb-card-body>
