FIX: Design issue

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,4 +1,4 @@
-<nb-card size="giant" style="overflow: auto" class="mt-3">
+<nb-card size="large" style="overflow: auto" class="mt-2">
     <nb-card-header>
         <div class="row">
             Time Range
