--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,24 +1,15 @@
+<div class="d-flex align-items-center h-100 justify-content-center mb-3">
+  <span class="ps-2">
+      <img [src]="logo" alt="" height="50">
+  </span>
+  <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
+</div>
 <h1 id="title" class="title">Forgot Password</h1>
-<p class="sub-title">Enter your email address and we’ll send a link to reset your password</p>
-
-<!-- <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh snap!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-  </ul>
-</nb-alert> -->
-
-<!-- <nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-  <p class="alert-title"><b>Hooray!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-  </ul>
-</nb-alert> -->
-
+<!-- <p class="sub-title">Enter your email address and we’ll send a link to reset your password</p> -->
 <form (ngSubmit)="submit()" #requestPassForm="ngForm" aria-labelledby="title">
 
-  <div class="form-control-group">
-    <label class="label" for="input-email">Enter your email address:</label>
+  <div class="form-control-group mb-4">
+    <label class="label m-0" for="input-email">Enter your email address:</label>
     <input nbInput
            [(ngModel)]="user.email"
            #email="ngModel"
@@ -35,9 +26,6 @@
       <p class="error-message" *ngIf="email.errors?.required">
         Email is required!
       </p>
-      <!-- <p class="error-message" *ngIf="email.errors?.pattern">
-        Email should be the real one!
-      </p> -->
     </ng-container>
   </div>
 
@@ -50,7 +38,7 @@
   </button>
 </form>
 
-<section class="sign-in-or-up" aria-label="Sign in or sign up">
+<section class="sign-in-or-up mt-1" aria-label="Sign in or sign up">
   <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
   <!-- <p><a routerLink="../register" class="text-link">Register</a></p> -->
 </section>
