--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -146,8 +146,25 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group mt-3">
-                <nb-checkbox status="info" formControlName="monitored">{{'kMonitored' | translate}}</nb-checkbox>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group mb-1">
+                        <label for="vitals" class="label">
+                        {{'kVitals' | translate}}</label>
+                        <nb-select size="medium" fullWidth multiple id="vitals" formControlName="vitals" placeholder="Select Vitals" [(selected)]="selectedItem">
+                            <nb-select-label>
+                                {{ selectedItem }}
+                            </nb-select-label>
+                            <nb-option *ngFor="let item of vitals" [value]="item.id">{{item?.name}}
+                            </nb-option>
+                        </nb-select>
+                    </div>
+                </div>
+                <div class="col-md-6 my-auto">
+                    <div class="form-group mt-5">
+                        <nb-checkbox status="info" formControlName="monitored">{{'kMonitored' | translate}}</nb-checkbox>
+                    </div>
+                </div>
             </div>
             <div class="row  justify-content-end">
                 <div class="col-auto mr-2 ml-2 d-flex justify-content-end">
