--- a/src/app/pages/patients/filter-dialog/filter-dialog.component.html
+++ b/src/app/pages/patients/filter-dialog/filter-dialog.component.html
@@ -26,7 +26,7 @@
             </div>
         </nb-card-body>
         <nb-card-footer class="d-flex justify-content-end">
-            <button size="small" nbButton status="warning" (click)="resetFilter()"> Clear</button>
+            <button size="small" nbButton status="warning" (click)="resetFilter()"> {{'kClear' | translate}}</button>
             <button size="small" class="ms-2" nbButton status="danger" (click)="close()">{{'kCancel' | translate}}</button>
             <button size="small" class="ms-2" nbButton status="success" (click)="startSearch()" [disabled]="enableSearch()">{{'kSearch' | translate}}</button>
         </nb-card-footer>
