fix: Route navigation to login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
            #email="ngModel"
            name="email"
            id="input-email"
-           placeholder="Email address"
+           placeholder="Email or Username"
            autofocus
            [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
            [required]="getConfigValue('forms.validation.email.required')"
