--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -69,11 +69,17 @@
       <p class="error-message" *ngIf="password.errors?.required">
         Password is required!
       </p>
+      <p class="error-message" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+        Password should contains
+        from {{ getConfigValue('forms.validation.password.minLength') }}
+        to {{ getConfigValue('forms.validation.password.maxLength') }}
+        characters
+      </p>
     </ng-container>
   </div>
 
   <div class="form-control-group">
-    <label class="label m-0" for="input-re-password">Repeat password:</label>
+    <label class="label" for="input-re-password">Repeat password:</label>
     <input nbInput
            [(ngModel)]="model.confirmPassword"
            #rePass="ngModel"
@@ -113,3 +119,4 @@
 <section class="another-action" aria-label="Sign in">
   Already have an account? <a class="text-link" routerLink="../login">Log in</a>
 </section>
+
