fix: refacter the address

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -14,9 +14,10 @@
             <div class="col-md-4">
               <p class="text-uppercase"><nb-icon icon="map-marker-alt" nbTooltip="Location" nbTooltipPlacement="left" pack="font-awesome"></nb-icon> 
                     <span class="ps-4">{{patient?.address}}</span>
-                    <span class="ps-1">{{patient?.state}}</span>, <br>
+                     <br>
                     <span><nb-icon></nb-icon> 
                     <span class="ps-4">{{patient?.city}}</span>,
+                    <span class="ps-1">{{patient?.state}}</span>,
                     <span class="ps-1">{{patient?.country}}</span>,
                     <span class="ps-1">{{patient?.zipcode}}</span>.
                     </span>
