--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,4 +1,4 @@
-<nb-card size="giant" style="overflow: auto" status="info" class="mt-3">
+<nb-card size="large" style="overflow: auto" status="info" class="mt-3">
     <nb-card-header>
         <div class="row">
             <div class="col-11">
