feat: Added register component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -62,3 +62,6 @@
 
 <section class="another-action" aria-label="Register">
   Don't have an account? <a class="text-link" routerLink="../register">Register</a>
+  <p class="copyright text-center">
+    Version: {{version}}
+</p>
