--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -42,3 +42,6 @@
   <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
   <!-- <p><a routerLink="../register" class="text-link">Register</a></p> -->
 </section>
+<p class="copyright text-center">
+  Version: {{version}}
+</p>
