--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,10 +1,13 @@
 <div class="d-flex align-items-center h-100 justify-content-center mb-3">
-  <span class="ps-2">
-      <img [src]="logo" alt="" height="50">
-  </span>
-  <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
-</div>
-<h1 id="title" class="title">Register</h1>
+    <span class="ps-2">
+        <img [src]="logo" alt="" height="50">
+    </span>
+    <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
+  </div>
+  <h1 id="title" class="title">Register</h1>
+<nb-stepper orientation="horizontal">
+    <nb-step label="Register">
+
 <form (ngSubmit)="register()" #form="ngForm" aria-labelledby="title">
 
   <div class="form-control-group m-0">
@@ -20,7 +23,7 @@
            [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
            [required]="getConfigValue('forms.validation.firstName.required')"
            [attr.aria-invalid]="firstName.invalid && firstName.touched ? true : null">
-    <ng-container *ngIf="firstName.invalid && fullName.touched">
+    <ng-container *ngIf="firstName.invalid && firstName.touched">
       <p class="error-message" *ngIf="firstName.errors?.required">
         First name is required!
       </p>     
@@ -114,9 +117,117 @@
           [class.btn-pulse]="submitted">
     Register
   </button>
+  <p class="copyright text-center">
+    Version: {{version}}
+</p>
 </form>
-
 <section class="another-action" aria-label="Sign in">
   Already have an account? <a class="text-link" routerLink="../login">Log in</a>
 </section>
+</nb-step>
 
+<nb-step label="Create Profile">
+    <ng-template #stepLabel>
+    </ng-template>
+    <form [formGroup]="profileForm" (ngSubmit)="saveProfile()" aria-labelledby="title">
+       <div class="form-control-group m-0">
+          <label class="label m-0" for="firstName">First name:</label>
+          <input nbInput
+                 id="firstName"
+                 placeholder="First name"
+                 autofocus
+                 fullWidth formControlName = "firstName">
+        </div>
+
+        <div class="form-control-group m-0">
+            <label class="label m-0" for="lastName">Last name:</label>
+            <input nbInput     
+                   id="lastName"
+                   placeholder="Last name"
+                   autofocus
+                   fullWidth formControlName="lastName">
+          </div>
+
+          <div class="form-control-group m-0">
+            <label class="label m-0" for="phoneNumber">Phone Number:</label>
+            <input nbInput
+                   id="phoneNumber"
+                   placeholder="Phone Number"
+                   autofocus
+                   fullWidth
+                   formControlName="phoneNumber">
+          </div>
+
+          <div class="form-control-group m-0">
+          <label class="label m-0" for="dob">Date of Birth:</label>
+          <input nbInput [nbDatepicker]="rangepicker"
+          id="dob"
+          placeholder="Date of Birth"
+          autofocus
+          fullWidth
+          formControlName="dob">
+            <nb-rangepicker #rangepicker></nb-rangepicker>
+          </div>
+
+          <div class="form-control-group m-0">
+        <label class="label m-0" for="input-name">Gender:</label>
+          <nb-radio-group id="dob"  autofocus
+          fullWidth
+          formControlName="gender">
+            <nb-radio value="1">Male</nb-radio>
+            <nb-radio value="2">Female</nb-radio>
+            <nb-radio value="3">Other</nb-radio>
+          </nb-radio-group>
+          </div>
+
+          <div class="form-control-group m-0">
+            <label class="label m-0" for="address">Address:</label>
+            <input nbInput       
+                   id="address"
+                   placeholder="Address"
+                   autofocus
+                   fullWidth
+                   formControlName="address"  >
+          </div>
+
+          <div class="form-control-group m-0">
+            <label class="label m-0" for="city">City:</label>
+            <input nbInput
+                   id="city"
+                   name="city"
+                   placeholder="City"
+                   autofocus
+                   fullWidth formControlName="city" >
+          </div>
+      
+          <div class="form-control-group m-0">
+            <label class="label m-0" for="state">State:</label>
+            <input nbInput
+                   id="input-name"  
+                   placeholder="State"
+                   autofocus
+                   fullWidth
+                   formControlName="state" >
+          </div>
+
+          <div class="form-control-group">
+            <label class="label m-0" for="country">Country:</label>
+            <input nbInput  
+                   id="country"
+                   name="country"
+                   placeholder="Country"
+                   autofocus
+                   fullWidth
+                   formControlName="country">
+          </div>
+
+        
+        <button nbButton
+                fullWidth
+                status="success"
+                [class.btn-pulse]="submitted">
+          Save Profile
+        </button>
+      </form>
+</nb-step>
+</nb-stepper>
